--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Conway's Game of Life</title>
 
     <script src="game.js"></script>
+    <link rel="stylesheet" type="text/css" src="style.css">
 </head>
 
 <body>
