New Start Configuration and New Turn buttons for testing. No implementation logic behind the latter yet.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+  <input type="button" onClick="CreateRandomCells(50,50)" value="New Start Configuration"></input> <br/> <br/>
+  <input type="button" value="New Turn"></input>
   <!-- This is where the game is going to be "played" -->
   <div id="gamespace">
     <table id="grid">
@@ -18,7 +20,7 @@
 
   <script>
     CreateGrid(50,50);
-    CreateRandomCells(50, 50);
+    //CreateRandomCells(50, 50);
   </script>
 </body>
 </html>
