--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <input type="button" onClick="CreateRandomCells(50,50)" value="New Start Configuration"></input> <br/> <br/>
   <input type="button" value="New Turn" onClick="LivesOrDies()"></input> <br/><br/>
-  <input type="button" value="Start" onClick="Start()"></input>
+  <input type="button" value="Start" onClick="Start()"></input> <br/><br/>
+  <input type="button" value="Stop" onClick="Stop()"></input> <br/><br/>
   <!-- This is where the game is going to be "played" -->
   <div id="gamespace">
     <table id="grid">
@@ -20,10 +21,7 @@
   <script src="game.js"></script>
   <script>
     CreateGrid(50,50);
-    function Start() {
-      LivesOrDies();
-      setTimeout(Start, 3000);
-    }
+
   </script>
 </body>
 </html>
